[package]
name = "type_erased_vec"
version = "0.1.4"
edition = "2021"
authors = ["chubei<chubei@oppentech.com>"]
license = "MIT"
description = "A type erased Vec."
repository = "https://github.com/chubei-oppen/type_erased_vec"
keywords = ["vec", "type-erasure"]
categories = ["memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bytemuck = "1"
